--- a/src/app/page/Driver/driverpage/driverpage.component.html
+++ b/src/app/page/Driver/driverpage/driverpage.component.html
@@ -1,28 +1,75 @@
 <div class="modal-header">
-  <b>{{viewData.driverfullname}}</b>
+  <h1 *ngIf="driverdata">{{driverdata.fullname}}</h1>
+  <h1 *ngIf="!driverdata">เพิ่มข้อมูลพนักงานขับรถ</h1>
   <button type="button" class="btn-close" aria-label="Close" (click)="modal.close()"></button>
 </div>
-
-
-
-<mat-card class="example-card" appearance="outlined">
-  <div class="row no-gutters">
-    <div class="col-2 m-2">
-      <img class="driverimg" [src]="viewData.lineimage==''?base64Image:viewData.lineimage"
-           (click)="fileInput.click()">
-      <input type="file" (change)="onFileSelect($event)" #fileInput style="display: none;"/>
+<div class="position-relative" style="height: 100%; width:100%; overflow:hidden">
+  <!-- spinner -->
+  <div class="container-spiner" *ngIf="show.Spinner">
+    <div class="row">
+      Please Watting...
     </div>
-    <div class="col-6">
-      <div class="row m-2"><mat-icon style="width: auto;">person</mat-icon> {{viewData.drivername}} </div>
-      <div class="row m-2"><mat-icon style="width: auto;">calendar_view_day</mat-icon> {{viewData.surname}} </div>
-      <div class="row m-2"><mat-icon style="width: auto;">assignment_ind</mat-icon> {{viewData.license}} </div>
-      <div class="row m-2"><mat-icon style="width: auto;">phone</mat-icon> {{viewData.phone}} </div>
-      <div class="row m-2"><mat-icon style="width: auto;">face</mat-icon> {{viewData.linename}} </div>
-      <!-- <div class="row"> {{viewData.vname}} </div> -->
-    </div>
-    <div class="col-2">
-      <qrcode [qrdata]="Qrdata" [allowEmptyString]="true" [width]="100"></qrcode>
+    <mat-spinner></mat-spinner>
+  </div>
+  <!-- Body -->
+  <div  style="width:100%; height: 100%;">
+    <mat-card class="example-card" appearance="outlined">
+      <div class="row no-gutters" style="display: flex; justify-content: center; padding: 10px;">
+        <div class="col-2 m-2 d-flex align-items-center justify-content-center" style="height: auto;" *ngIf="driverdata" >
+          <img class="driverimg" [src]="editdata.driverimg==''?base64Image:editdata.driverimg"
+               (click)="fileInput.click()">
+          <input type="file" (change)="onFileSelect($event)" #fileInput style="display: none;"/>
+        </div>
+        <div class="col-6">
+          <div class="row m-2 d-flex align-items-center">
+            <mat-icon style="width: auto; margin-right: 8px;">label</mat-icon>
+            <select [(ngModel)]="editdata.prefix" (ngModelChange)="driverdatachange('prefix')">
+              <option>นาย</option>
+              <option>นาง</option>
+              <option>นางสาว</option>
+            </select>
+          </div>
+          <div class="row m-2 d-flex align-items-center">
+            <mat-icon style="width: auto; margin-right: 8px;">person</mat-icon>
+            <input matInput [(ngModel)]="editdata.empname" placeholder="ชื่อพนักงานขับรถ" (ngModelChange)="driverdatachange('empname')"/>
+          </div>
+          <div class="row m-2">
+            <mat-icon style="width: auto;">calendar_view_day</mat-icon>
+            <input matInput [(ngModel)]="editdata.surname" placeholder="นามสกุล" (ngModelChange)="driverdatachange('surname')"/>
+          </div>
+          <div class="row m-2">
+            <mat-icon style="width: auto;">phone</mat-icon>
+            <input matInput [(ngModel)]="show.phone" type="tel" value="show.phone"
+            (ngModelChange)="validatePhoneNumber($event)" placeholder="หมายเลขโทรศัพท์" />
+          </div>
+          <div class="row m-2">
+            <mat-icon style="width: auto;">assignment_ind</mat-icon>
+            <input matInput [(ngModel)]="editdata.licent" placeholder="เลขที่ใบขับขี่"  (ngModelChange)="driverdatachange('licent')"/>
+          </div>
+          <div class="row m-2">
+            <mat-icon style="width: auto;">short_text</mat-icon>
+            <input matInput [(ngModel)]="editdata.remark" placeholder="หมายเหตุ"  (ngModelChange)="driverdatachange('remark')"/>
+          </div>
+
+          <div class="row m-2">
+            <mat-icon style="width: auto;">face</mat-icon>
+            <span> Line name : {{editdata.linename}} </span>
+          </div>
+        </div>
+        <div class="col-2 m-2 d-flex align-items-center justify-content-center" style="height: auto;"  *ngIf="driverdata" >
+          <qrcode [qrdata]="Qrdata" [allowEmptyString]="true" [width]="150"></qrcode>
+        </div>
+      </div>    
+    </mat-card>
+    
+    <div style="display: flex; justify-content: center;margin: 16px;">
+      <button mat-raised-button color="warn" style="margin: 0 8px; cursor: pointer;" 
+              (click)="deletedriver()" *ngIf="driverdata" >Delete</button>
+      <button mat-raised-button color="primary" style="margin: 0 8px;cursor: pointer;"
+              (click)="updatedriver()" *ngIf="show.edit">Save</button>
+      <button mat-raised-button color="primary" style="margin: 0 8px;cursor: pointer;"
+              (click)="savedriver()" *ngIf="!driverdata">Save</button>
     </div>
   </div>
+</div>
 
-</mat-card>
