--- a/src/app/page/Vehicle/searchvehiclepage/searchvehiclepage.component.html
+++ b/src/app/page/Vehicle/searchvehiclepage/searchvehiclepage.component.html
@@ -1,185 +1,74 @@
-<div class="row no guster" style="width: 100%;">
 
-    <div class="col-2 example-full-width" style="text-align: end; vertical-align: middle; padding: 10px; ">
-      <h2 style="text-align:center; vertical-align: text-bottom;">ข้อมูลรถรับ-ส่ง</h2>
+
+
+<div class="position-relative" style="height: 100%; width:100%; overflow:hidden">
+  <!-- spinner -->
+  <div class="container-spiner" *ngIf="show.Spinner">
+    <div class="row">
+      Please Watting...
     </div>
-    <div class="col-6 example-full-width" >
-      <mat-form-field  style=" width: 100%; padding: 10px; " >
-        <!-- <mat-form-field hintLabel="Max 20 characters"> -->
-          <mat-label>Name or number</mat-label>
-        <input matInput #input maxlength="20" (keyup)="applyFilter($event.target)" matInput placeholder="Filter">
-      </mat-form-field>    
+    <mat-spinner></mat-spinner>
+  </div>
+  
+  <!-- Header -->
+  <div class="container" style="display: flex; justify-content: space-between; 
+      align-items: center; width:100hw; margin: 5px; overflow:hidden;">
+    <div class="col" style="display: flex; justify-content: center; ">
+      <div class="search-container"  style="width: 100%; gap:10px;">
+        <mat-form-field appearance="outline" style="width: 50vw;">
+          <input matInput placeholder="Search" [(ngModel)]="keyword" (click)="searchdata()" (keydown.enter)="searchdata()"  />
+          <mat-icon matPrefix>search</mat-icon>
+        </mat-form-field>
+        <select matNativeControl [(ngModel)]="show.limit" (ngModelChange)="searchdata()">
+          <option value="10">ไม่เกิน 10</option>
+          <option value="20">ไม่เกิน 20</option>
+          <option value="30">ไม่เกิน 30</option>
+          <option value="40">ไม่เกิน 40</option>
+          <option value="50">ไม่เกิน 50</option>
+          <option value="0">เลือกทั้งหมด</option>
+        </select>
+      </div>
     </div>
-    <div class="col-4">
-      <div class="example-full-width" style="text-align: end; vertical-align: middle; padding: 10px; ">
-        <mat-icon style="vertical-align:middle; margin: 5px;" *ngIf="true">view_module</mat-icon>
-        <mat-icon style="vertical-align:middle; margin: 5px;" *ngIf="true">view_list</mat-icon>
-        <mat-icon style="vertical-align:middle; margin: 5px;" *ngIf="true">print</mat-icon>
-        <mat-icon style="vertical-align:middle; margin: 5px;" *ngIf="true">add</mat-icon>
+
+    <div class="col" style="flex: 0 0 auto; text-align: right;">
+      <div class="row">
+        <div class="col" style="display: flex; align-items: center;" 
+          mat-raised-button matTooltip="เพิ่มข้อมูลพนักงานขับรถ" (click)="addvehicle(modalvehicledetail)">
+          <mat-icon style="width: 100%; color: blue;">add_box</mat-icon>
+        </div>
+        <div class="col" style="display: flex; align-items: center;" 
+          mat-raised-button matTooltip="พิมพ์ข้อมูลพนักงานขับรถ" (click)="exportprint()">
+          <mat-icon style="width: 100%; color: blue;">print</mat-icon>
+        </div>
+        <div class="col" style="display: flex; align-items: center;" 
+          mat-raised-button matTooltip="ส่งออกข้อมูลพนักงานขับรถเป็น Excel" (click)="exportexcel()">
+          <mat-icon style="width: 100%; color: blue;">file_download</mat-icon>
+        </div>
       </div>
     </div>
   </div>
-  
-  <!-- Table & Summary data -->
-  <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-  
-      <!-- company id Column -->
-      <ng-container matColumnDef="id">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> No. </th>
-        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-        <td mat-footer-cell *matFooterCellDef> Total </td>
-      </ng-container>
-    
-    <!-- vname Column -->
-      <ng-container matColumnDef="vname">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> ชื่อรถ </th>
-        <td mat-cell *matCellDef="let element"> {{element.vname}} </td>
-        <td mat-footer-cell *matFooterCellDef>  </td>
-      </ng-container>
-    
-    <!-- license Column -->
-    <ng-container matColumnDef="license">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> ทะเบียน </th>
-        <td mat-cell *matCellDef="let element"> {{element.license}} </td>
-        <td mat-footer-cell *matFooterCellDef>  </td>
-      </ng-container>
-    
-    <!-- provincename Column -->
-    <ng-container matColumnDef="provincename">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> จังหวัด </th>
-        <td mat-cell *matCellDef="let element"> {{element.provincename}} </td>
-        <td mat-footer-cell *matFooterCellDef>  </td>
-      </ng-container>
-    
-    <!-- vtype Column -->
-    <ng-container matColumnDef="vtype">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> ประเภทรถ </th>
-        <td mat-cell *matCellDef="let element"> {{element.vtype}} </td>
-        <td mat-footer-cell *matFooterCellDef>  </td>
-      </ng-container>
-    
-    <!-- driverfullname Column -->
-    <ng-container matColumnDef="driverfullname">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> พนักงานขับรถ </th>
-        <td mat-cell *matCellDef="let element"> {{element.driverfullname}} </td>
-        <td mat-footer-cell *matFooterCellDef>  </td>
-      </ng-container>
-    
-    <!-- nickname Column -->
-    <ng-container matColumnDef="nickname">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> ชื่อเล่น </th>
-        <td mat-cell *matCellDef="let element"> {{element.nickname}} </td>
-        <td mat-footer-cell *matFooterCellDef>  </td>
-      </ng-container>
-    
-    <!-- phone Column -->
-    <ng-container matColumnDef="phone">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> เบอร์โทรหลัก </th>
-        <td mat-cell *matCellDef="let element"> {{element.phone}} </td>
-        <td mat-footer-cell *matFooterCellDef>  </td>
-      </ng-container>
-    
-    <!-- mobile Column -->
-    <ng-container matColumnDef="mobile">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> เบอร์โทรรอง </th>
-        <td mat-cell *matCellDef="let element"> {{element.mobile}} </td>
-        <td mat-footer-cell *matFooterCellDef>  </td>
-      </ng-container>
-    
-    <!-- provincecode Column -->
-    <ng-container matColumnDef="provincecode">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> รหัสจังหวัด </th>
-        <td mat-cell *matCellDef="let element"> {{element.provincecode}} </td>
-        <td mat-footer-cell *matFooterCellDef>  </td>
-      </ng-container>
-    
-    <!-- driverlicense Column -->
-    <ng-container matColumnDef="driverlicense">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> ใบขับขี่ </th>
-        <td mat-cell *matCellDef="let element"> {{element.driverlicense}} </td>
-        <td mat-footer-cell *matFooterCellDef>  </td>
-      </ng-container>
-    
-    <!-- driverlicensetype Column -->
-    <ng-container matColumnDef="driverlicensetype">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> ประเภทใบขับขี่ </th>
-        <td mat-cell *matCellDef="let element"> {{element.driverlicensetype}} </td>
-        <td mat-footer-cell *matFooterCellDef>  </td>
-      </ng-container>
-    
-
-    <!-- totaltrip Column -->
-    <ng-container matColumnDef="totaltrip">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> จำนวนงาน </th>
-        <td mat-cell *matCellDef="let element"> {{element.totaltrip | number}} </td>
-        <td mat-footer-cell *matFooterCellDef> {{getSumdata('totaltrip') | number:'1.2-2':'en-US'}} </td>
-      </ng-container>
-    
-    <!-- totalship0 Column -->
-    <ng-container matColumnDef="totalship0">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> กะเช้า </th>
-        <td mat-cell *matCellDef="let element"> {{element.totalship0 | number}} </td>
-        <td mat-footer-cell *matFooterCellDef>{{getSumdata('totalship0')| number:'1.2-2':'en-US'}}  </td>
-      </ng-container>
-
-    <!-- totalship1 Column -->
-    <ng-container matColumnDef="totalship1">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> กะดึก </th>
-        <td mat-cell *matCellDef="let element"> {{element.totalship1 | number}} </td>
-        <td mat-footer-cell *matFooterCellDef>{{getSumdata('totalship1')| number:'1.2-2':'en-US'}}  </td>
-      </ng-container>
-
-    <!-- drivername Column -->
-      <ng-container matColumnDef="drivername">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> ชื่อพนักงานขับรถ </th>
-        <td mat-cell *matCellDef="let element"> {{element.drivername}} </td>
-        <td mat-footer-cell *matFooterCellDef>  </td>
-      </ng-container>
-
-    <!-- surname Column -->
-      <ng-container matColumnDef="surname">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> นามสกุล </th>
-        <td mat-cell *matCellDef="let element"> {{element.surname}} </td>
-        <td mat-footer-cell *matFooterCellDef>  </td>
-      </ng-container>
-
-    <!-- linename Column -->
-     <ng-container matColumnDef="linename">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> ชื่อในไลน์ </th>
-        <td mat-cell *matCellDef="let element"> {{element.linename}} </td>
-        <td mat-footer-cell *matFooterCellDef>  </td>
-      </ng-container>
-
-      <!-- lineimage Column -->
-      <ng-container matColumnDef="lineimage">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> รูปในไลน์ </th>
-        <td mat-cell *matCellDef="let element"> {{element.lineimage}} </td>
-        <td mat-footer-cell *matFooterCellDef>  </td>
-      </ng-container>
-
-    <!-- driverid Column -->
-      <ng-container matColumnDef="driverid">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> รหัสพนักงานขับรถ </th>
-        <td mat-cell *matCellDef="let element"> {{element.driverid}} </td>
-        <td mat-footer-cell *matFooterCellDef>  </td>
-      </ng-container>
-
-      <!-- province Column -->
-      <ng-container matColumnDef="province">
-        <th mat-header-cell mat-sort-header *matHeaderCellDef> รหัสจังหวัด </th>
-        <td mat-cell *matCellDef="let element"> {{element.province}} </td>
-        <td mat-footer-cell *matFooterCellDef>  </td>
-      </ng-container>
-
-        <!-- Control Header Row Footer -->
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row (click)="onSelectedRow(row)" *matRowDef="let row; columns: displayedColumnsData;"></tr>
-      <tr mat-footer-row *matFooterRowDef="displayedColumns; sticky: true"></tr>
-  </table>
-  
-    <!--  Control Page แสดงข้อมูลมากกว่า 1 หน้า -->
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons> </mat-paginator>
-  
+  <!-- Body -->
+  <div  style="width:100%; height: 90%; overflow :scroll">
+    <div class="card-container" style="width:100%;">
+      <div class="card-item" *ngFor="let driver of listvehicle" >
+        <mat-card (click)="showvehicle(driver,modalvehicledetail)">
+          <mat-card-header style="background-color: lightgreen;">
+            <div mat-card-avatar style="background-size:cover;" 
+            [style.background-image]="driver.driverimage === '' ? 'url(' + va.icon.user + ')' : 'url(' + driver.driverimage + ')'"></div>
+            <mat-card-title>{{driver.vlicent }}</mat-card-title>
+            <mat-card-subtitle>{{driver.fullname }}</mat-card-subtitle>
+          </mat-card-header>
+          
+          <mat-card-content>
+            <div class="center-content" ><mat-icon>phone</mat-icon> {{ driver.driverphone }}</div>
+            <div class="center-content" ><mat-icon>local_shipping</mat-icon> {{ driver.typename }}</div>
+          </mat-card-content>
+        </mat-card>
+      </div>
+    </div>
   </div>
-  
+</div>
+
+<ng-template #modalvehicledetail let-modal style="overflow-y: hidden;">
+  <app-vehiclepage [vehicledata]="activevehicle" [modal]="modal" (talk)="talkbackdata($event)" style="overflow-y: hidden;"></app-vehiclepage>
+</ng-template>
